objects/BW_Status_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>BW_Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BW_Budget_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Budget__c),
&quot;1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Budget_Value__c</fullName>
        <formula>VALUE(LEFT(TEXT(BW_Budget__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Budget__c</fullName>
        <inlineHelpText>Green = 1 to 3
Yellow = 4 to 7
Red = 8 to 10</inlineHelpText>
        <label>Budget</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Issues_Risks__c</fullName>
        <label>Issues/Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BW_Leadership_Asks__c</fullName>
        <label>Leadership Asks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BW_Plans_for_Next_Week__c</fullName>
        <label>Plans for Next Week</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BW_Report_Status__c</fullName>
        <label>Report Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Resources_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Resources__c),
&quot;1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resources</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Resources_Value__c</fullName>
        <formula>VALUE(LEFT(TEXT(BW_Resources__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resources Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Resources__c</fullName>
        <inlineHelpText>Green = 1 to 3
Yellow = 4 to 7
Red = 8 to 10</inlineHelpText>
        <label>Resources</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Schedule_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Schedule__c), 
&quot;1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;), 
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Schedule_Value__c</fullName>
        <formula>VALUE(LEFT(TEXT(BW_Schedule__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Schedule__c</fullName>
        <inlineHelpText>Green = 1 to 3
Yellow = 4 to 7
Red = 8 to 10</inlineHelpText>
        <label>Schedule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Scope_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Scope__c),
&quot;1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Scope_Value__c</fullName>
        <formula>VALUE(LEFT(TEXT(BW_Scope__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Scope__c</fullName>
        <inlineHelpText>Green = 1 to 3
Yellow = 4 to 7
Red = 8 to 10</inlineHelpText>
        <label>Scope</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Status_Summary__c</fullName>
        <label>Status Summary</label>
        <referenceTo>BW_Status_Summary__c</referenceTo>
        <relationshipLabel>Workstream Status Indicators</relationshipLabel>
        <relationshipName>Workstream_Status_Indicators</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BW_Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BW_Trending_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Trending__c),
&quot;Up&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTF&quot;,&quot;Up&quot;),
&quot;Down&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTK&quot;,&quot;Down&quot;),
&quot;Stable&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTP&quot;,&quot;Stable&quot;),
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Trending__c</fullName>
        <label>Trending</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                    <default>true</default>
                    <label>Stable</label>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Week_Ending__c</fullName>
        <label>Week Ending</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>BW_Workstream__c</referenceTo>
        <relationshipLabel>Status Indicators</relationshipLabel>
        <relationshipName>Status_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Status Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Status Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Indicators</pluralLabel>
    <recordTypes>
        <fullName>BW_Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>BW_Workstream</fullName>
        <active>true</active>
        <label>Workstream</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>